<resources>
    <string name="app_name">OurSingapre</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter island name here</string>
    <string name="des">Description</string>
    <string name="hint_des">Enter description here</string>
    <string name="sqKM">Square Km</string>
    <string name="hint_sqKM">Enter area here</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>

    <string name="title_activity_main">Insert Island</string>
    <string name="title_activity_second">Show Island</string>
    <string name="title_activity_third">Modify Island</string>

    <string name="id">Island ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all islands with 5 stars</string>
</resources>